[gd_scene load_steps=10 format=3 uid="uid://r4ytomf7hl16"]

[ext_resource type="Script" uid="uid://3233o4fox5q2" path="res://Scripts/main_menu.gd" id="1_28flt"]
[ext_resource type="Theme" uid="uid://b0wxdkg8qvafo" path="res://Assets/Themes and Styles/theme.tres" id="2_1ehe0"]
[ext_resource type="Texture2D" uid="uid://daanu5tcd6nt8" path="res://Assets/Textures/cutscene_placeholder.png" id="2_48xlc"]
[ext_resource type="Script" uid="uid://doqtuarp6f848" path="res://Scripts/button_sfx.gd" id="3_ce3w2"]
[ext_resource type="Texture2D" uid="uid://u2l8bwko05qr" path="res://Assets/Textures/title_underline.png" id="5_n45e2"]

[sub_resource type="AtlasTexture" id="AtlasTexture_n45e2"]
atlas = ExtResource("2_48xlc")
region = Rect2(2304, 0, 1152, 648)

[sub_resource type="AtlasTexture" id="AtlasTexture_ce3w2"]
atlas = ExtResource("2_48xlc")
region = Rect2(1152, 0, 1152, 648)

[sub_resource type="AtlasTexture" id="AtlasTexture_1ehe0"]
atlas = ExtResource("2_48xlc")
region = Rect2(0, 0, 1152, 648)

[sub_resource type="SpriteFrames" id="SpriteFrames_yhxw7"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_n45e2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ce3w2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1ehe0")
}],
"loop": false,
"name": &"Cutscene",
"speed": 1.0
}]

[node name="MainMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_28flt")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MainMenuPostProcess" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.07, 0.07, 0.07, 1)

[node name="Play" type="Button" parent="."]
layout_mode = 0
offset_left = 496.0
offset_top = 344.0
offset_right = 656.0
offset_bottom = 424.0
theme = ExtResource("2_1ehe0")
text = "Play"
script = ExtResource("3_ce3w2")

[node name="Title" type="Label" parent="."]
layout_mode = 0
offset_left = 304.0
offset_top = 128.0
offset_right = 849.0
offset_bottom = 199.0
theme = ExtResource("2_1ehe0")
theme_override_colors/font_color = Color(0.76862746, 0.38431373, 0.5254902, 1)
text = "Takeover tuning"
horizontal_alignment = 1

[node name="Underline" type="Sprite2D" parent="Title"]
modulate = Color(0.6313726, 0.3137255, 0.43137255, 1)
position = Vector2(272, 112)
scale = Vector2(0.59811854, 0.5981185)
texture = ExtResource("5_n45e2")

[node name="CutsceneBlocker" type="TextureRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 0

[node name="CutscenePlayer" type="AnimatedSprite2D" parent="CutsceneBlocker"]
position = Vector2(576, 325)
sprite_frames = SubResource("SpriteFrames_yhxw7")
animation = &"Cutscene"

[node name="Label" type="Label" parent="CutsceneBlocker/CutscenePlayer"]
offset_left = 248.0
offset_top = 267.0
offset_right = 563.0
offset_bottom = 309.0
theme = ExtResource("2_1ehe0")
theme_override_colors/font_color = Color(0.8784314, 0.6509804, 0.6862745, 1)
theme_override_font_sizes/font_size = 42
text = "Press ESC to skip"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_left = -208.0
offset_top = 272.0
offset_right = -39.68451
offset_bottom = 996.705
rotation = -0.70788765
color = Color(0.76862746, 0.38431373, 0.5254902, 1)

[node name="ColorRect2" type="ColorRect" parent="."]
layout_mode = 0
offset_left = -100.757935
offset_top = 65.765945
offset_right = -26.238037
offset_bottom = 999.3394
rotation = -0.70788765
color = Color(0.76862746, 0.38431373, 0.5254902, 1)

[connection signal="pressed" from="Play" to="." method="_on_play_pressed"]
[connection signal="animation_finished" from="CutsceneBlocker/CutscenePlayer" to="." method="_on_cutscene_player_animation_finished"]
